--- a/index.html
+++ b/index.html
@@ -683,20 +683,20 @@
 
             <div class="project swiper-slide">
               <div class="text">
-                <h3>POWR eSports Store</h3>
+                <h3>Riyadh Season Website Clone</h3>
                 <p>
-                  This is a fully functional e commerce website that was the reason for me to join POWR eSports company
-                  as a Front-end Developer for their real website. The website have multi-pages, support multible currencies &
-                  multible languages.
+                  This is a clone for Riyadh season website made by me as a practical website. I've created 
+                  a fill page for each zone in the season, I've also included the events & the activities for 
+                  each zone!
                 </p>
-                <a class="main-btn" href="https://abdo382006.github.io/POWR_eSports_Store/" title="Visit POWR eSports Store Demo"
+                <a class="main-btn" href="https://abdo382006.github.io/Riyadh_Season_Website_Clone/index.html" title="Visit POWR eSports Store Demo"
                   target="_blank">
                   <i class="fas fa-display"></i> Live Demo
                 </a>
               </div>
             
               <figure class="image">
-                <img src="imgs/project-1-image.avif" alt="POWR eSports Store Image" />
+                <img src="imgs/project-2-image.avif" alt="Riyadh Season Website Clone" />
               </figure>
             </div>
 
